# blueDuck

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.json  docker-compose.dev.yml  docker-compose.yml
cmake/: CompilerOptions.cmake  FindLibGit2.cmake  PluginHelpers.cmake
db/migrations/: 001_initial_schema.sql  002_ssh_key_content.sql
docker/: config.json  entrypoint.sh
frontend/: angular.json  jest.config.js  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/core/models/: project.model.ts
frontend/src/app/core/services/: project.service.spec.ts  project.service.ts
frontend/src/app/features/cpe-mappings/: cpe-mapping-list.component.ts
frontend/src/app/features/projects/new-project-dialog/: new-project-dialog.component.ts
frontend/src/app/features/projects/project-detail/: project-detail.component.ts
frontend/src/app/features/projects/project-list/: project-list.component.ts
frontend/src/app/features/reports/report-detail/: report-detail.component.ts
interfaces/: CMakeLists.txt  ICveSource.h  IDependencyAnalyzer.h  PluginMeta.h
plugins/: CMakeLists.txt
plugins/common/: CveDbWriter.cpp  CveDbWriter.h  CveHttpClient.cpp  CveHttpClient.h
plugins/cve_sources/cveorg/: CMakeLists.txt  CveOrgParser.cpp  CveOrgParser.h  CveOrgSource.cpp  CveOrgSource.h
plugins/cve_sources/nvd/: CMakeLists.txt  NvdParser.cpp  NvdParser.h  NvdSource.cpp  NvdSource.h
plugins/dependency_analyzers/cargo/: CMakeLists.txt  CargoAnalyzer.cpp  CargoAnalyzer.h
plugins/dependency_analyzers/cmake_cpp/: CMakeLists.txt  CmakeAnalyzer.cpp  CmakeAnalyzer.h
plugins/dependency_analyzers/npm/: CMakeLists.txt  NpmAnalyzer.cpp  NpmAnalyzer.h
plugins/dependency_analyzers/nuget/: CMakeLists.txt  NugetAnalyzer.cpp  NugetAnalyzer.h
plugins/dependency_analyzers/python/: CMakeLists.txt  PythonAnalyzer.cpp  PythonAnalyzer.h
src/: CMakeLists.txt  main.cpp
src/api/: ApiHelpers.h  CMakeLists.txt
src/api/controllers/: CpeMappingController.cpp  CpeMappingController.h  CveSourceController.cpp  CveSourceController.h  ProjectController.cpp  ProjectController.h  ReportController.cpp  ReportController.h  VersionController.cpp  VersionController.h
src/core/: AnalysisService.cpp  AnalysisService.h  Application.cpp  Application.h  CMakeLists.txt  Config.cpp  Config.h  PluginLoader.cpp  PluginLoader.h
src/db/: CMakeLists.txt  Database.cpp  Database.h  FieldHelpers.h  Migrator.cpp  Migrator.h
src/git/: CMakeLists.txt  CredentialProvider.cpp  CredentialProvider.h  GitRepository.cpp  GitRepository.h
src/report/: CMakeLists.txt  ReportEngine.cpp  ReportEngine.h
tests/: CMakeLists.txt
tests/integration/: test_db_migrator.cpp
tests/unit/: test_cmake_analyzer.cpp  test_nvd_parser.cpp  test_python_analyzer.cpp  test_version_compare.cpp
